<?xml version="1.0"?>
<package format="2">
  <name>stereo_camera_ros</name>
  <version>0.1.0</version>
  <description>ROS driver for UVC stereo cameras</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>
